# bioplatform

./: .gitignore  Makefile  README.md  beamercolorthemeAGH.sty  beamerthemeAGH.sty  bioplatform.k8s.yaml  ecosystem.config.js  main.tex  manage.py  prompt.txt  pyproject.toml
bioplatform/: asgi.py  settings.py  urls.py  wsgi.py
core/: admin.py  forms.py  models.py  urls.py  utils.py  views.py
core/forms/: __init__.py  auth.py  experiments.py  measurements.py  teams.py
core/migrations/: 0001_initial.py  0002_measurement.py  0003_measurement_image.py
core/templates/core/: base.html  experiment_confirm_delete.html  experiment_list.html  team_members.html
core/templates/core/auth/: login.html  register.html
core/templates/core/experiments/: experiment_confirm_delete.html  experiment_form.html  experiment_list.html
core/templates/core/measurements/: analyze_image_form.html  analyze_image_results.html  measurement_confirm_delete.html  measurement_form.html  measurement_list.html
core/templates/core/teams/: team_confirm_delete.html  team_detail.html  team_form.html  team_list.html  team_members.html
core/views/: __init__.py  auth.py  experiments.py  measurements.py  mixins.py  teams.py
